work around vlc bug and provide seekability of streamreader directly

libvlc always reports seekability false when using imem, so we simply
switch the player's seekability interfaces with the readers

also for future reference: this can be tested by using simpleplayer
with a QFile as mediasource

BUG: 293012